--- a/pages/canvas.html
+++ b/pages/canvas.html
@@ -28,14 +28,14 @@
   <main class="cuerpoCanvas" id="cuerpoCanvas">
 
             <!-- inicio navbar -->
-            <nav class="navbar navbar-expand-lg sticky-top" id="nav">
+            <nav class="navbar navbar-expand-lg " id="nav">
 
-              <div class="container">
+              <div class="container-fluid">
   
                   <a class="navbar-brand" href="#cuerpoCanvas"><img src="../assets/images/incubadoraLogoAzul.png" alt="logoIncubadora"></a>
   
-                  <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
-                      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                  <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                       aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                   </button>
@@ -85,7 +85,7 @@
     <!--------------------------------------------------------------------------------------------------------------------------->
 
 <form class="formularioCompleto" action="https://formsubmit.co/richardjosevargas@gmail.com" method="post"> 
-      <div class="container">
+      <div class="canvasContainer">
         <div class="propuestaValor col-12-sm">
           <p class="subtitulosCanvas">
             <a class="btn btn-primary" data-bs-toggle="collapse" href="#prop_valor" role="button" aria-expanded="false"
