Corrijo detalles finales

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <div class="container">
 
-                <a class="navbar-brand" href="#videoArea"><img src="./assets/images/incubadoraLogoAzul.png" alt=""></a>
+                <a class="navbar-brand" href="#videoArea"><img src="./assets/images/incubadoraLogoAzul.png" alt="logoIncubadora"></a>
 
                 <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -397,7 +397,7 @@
                         <div class="swiper-slide">
                             <div class="front">
                                 <div class="image">
-                                    <img src="./assets/images/EqLermontMilary2.jpg" alt="">
+                                    <img src="./assets/images/EqLermontMilary2.jpg" alt="fotoCarnetLermiontMilary">
                                 </div>
                             </div>
                             <div class="back">
@@ -423,7 +423,7 @@
                         <div class="swiper-slide">
                             <div class="front">
                                 <div class="image">
-                                    <img src="./assets/images/EqFerreyraJonatan2.jpg" alt="">
+                                    <img src="./assets/images/EqFerreyraJonatan2.jpg" alt="fotoCarnetJonatanLoisFerreyra">
                                 </div>
                             </div>
                             <div class="back">
@@ -449,7 +449,7 @@
                         <div class="swiper-slide">
                             <div class="front">
                                 <div class="image">
-                                    <img src="./assets/images/EqFerrerDiana2.jpg" alt="">
+                                    <img src="./assets/images/EqFerrerDiana2.jpg" alt="fotoCarnetFerrerDiana">
                                 </div>
                             </div>
                             <div class="back">
@@ -475,7 +475,7 @@
                         <div class="swiper-slide">
                             <div class="front">
                                 <div class="image">
-                                    <img src="./assets/images/EqLaVecchiaNicolas2.jpg" alt="">
+                                    <img src="./assets/images/EqLaVecchiaNicolas2.jpg" alt="fotoCarnetNicolasLavecchia">
                                 </div>
                             </div>
                             <div class="back">
@@ -501,7 +501,7 @@
                         <div class="swiper-slide">
                             <div class="front">
                                 <div class="image">
-                                    <img src="./assets/images/EqPulidoAndrea2.jpg" alt="">
+                                    <img src="./assets/images/EqPulidoAndrea2.jpg" alt="fotoCarnetAndreaPulido">
                                 </div>
                             </div>
                             <div class="back">
