--- a/pages/canvas.html
+++ b/pages/canvas.html
@@ -19,29 +19,30 @@
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Canvas-Incubadora</title>
+  <title>Formulario_Incubadora_de_tesis</title>
 
 </head>
 
 <body>
+ 
 
   <main class="cuerpoCanvas" id="cuerpoCanvas">
 
-            <!-- inicio navbar -->
-            <nav class="navbar navbar-expand-lg " id="nav">
+<!-- inicio navbar -->
+            <nav class="navbar navbar-expand-lg sticky-top" id="nav">
 
-              <div class="container-fluid">
+              <div class="container mb-5">
   
                   <a class="navbar-brand" href="#cuerpoCanvas"><img src="../assets/images/incubadoraLogoAzul.png" alt="logoIncubadora"></a>
   
                   <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                      aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                  </button>
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
   
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav justify-content-around">
+                    <ul class="navbar-nav justify-content-around ">
                           <li class="nav-item">
                               <a class="nav-link" href="#canvas">CANVAS</a>
                           </li>
@@ -63,8 +64,7 @@
               </div>
           </nav>
           <!-- fin navbar-->
-  
-
+<div class="encabezado">
     <section class="divisorNorte"><img class="col-12" src="../assets/images/division2.svg" alt="divisor_de _seccion">
     </section>
     <div class="fondoH1">
@@ -73,15 +73,15 @@
     <section class="divisorSur"><img class="col-12 img-fluid" src="../assets/images/division5.svg"
         alt="divisor_de _seccion">
     </section>
-    <a href="#"><img class="logo" src="../assets/images/incubadoraLogoAzul.png"></img></a>
+    <a href="#"><img class="logo mt-4" src="../assets/images/incubadoraLogoAzul.png"></img></a>
     <a name="canvas" id="canvas"><h2 class="tituloFoda"  >CANVAS</h2></a>
-    <p class="subtitulo mb-0" id="subtitulo">Por favor rellene con frases <strong> precisas y aclaratorias</strong> cada uno de los ítems
+    <p class="subtitulo mb-0 mt-1" id="subtitulo">Por favor rellene con frases <strong> precisas y aclaratorias</strong> cada uno de los ítems
       que se encuentran a continuación, no deje <strong>ningún espacio en blanco</strong> porque impedirá una evaluación
       orgánica de la idea de negocios, si alguna de las frases guías no se corresponde a su realidad en particular,
       <strong> busque algo análogo</strong>, la información la requerimos en esa disposición para que el sistema la
       analice y el equipo produzca un informe.
     </p>
-
+</div>
     <!--------------------------------------------------------------------------------------------------------------------------->
 
 <form class="formularioCompleto" action="https://formsubmit.co/richardjosevargas@gmail.com" method="post"> 
