--- a/index.html
+++ b/index.html
@@ -641,13 +641,13 @@
                                 <hr class="hrRedes">
                                 <h2>Nuestras Redes</h2>
                                 <div class="iconRedes">
-                                    <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://www.facebook.com/incubadoradetesis" target="_blank" rel="noopener noreferrer">
                                         <i class="fa-brands fa-facebook-f"></i>
                                     </a>
                                     <a href="https://www.instagram.com/incubadoradetesis/" target="_blank" rel="noopener noreferrer">
                                         <i class="fa-brands fa-instagram"></i>
                                     </a>
-                                    <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://www.linkedin.com/company/incubadora-de-tesis/about/" target="_blank" rel="noopener noreferrer">
                                         <i class="fa-brands fa-linkedin-in"></i>
                                     </a>
                                 </div>
